--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,9 +5,9 @@
     "usernamehw.errorlens",
     "wix.vscode-import-cost",
     "dbaeumer.vscode-eslint",
-    "streetsidesoftware.code-spell-checker",
-    "streetsidesoftware.code-spell-checker-spanish",
-    "mquandalle.graphql",
+    "streetsidesoftware.code-spell-checker", // optional extension
+    "streetsidesoftware.code-spell-checker-spanish", // optional extension
+    "kumar-harsh.graphql-for-vscode",
     "apollographql.vscode-apollo"
   ]
 }
